--- a/index.html
+++ b/index.html
@@ -339,7 +339,7 @@
       </main>
       <footer>
         <section class="pied-de-page">
-            <article>
+            <article class="a-propos">
                 <h3>A propos</h3>
                <ul>
                     <li>Fontionnement du site</li>
@@ -347,14 +347,14 @@
                     <li>Données et confidentialité</li>
                 </ul>
             </article>
-            <article>
+            <article class="nos-hebergements">
                 <h3>Nos hébergements</h3>
                 <ul>
                     <li>Charte qualité</li>
                     <li>Proposer votre hôtel</li>
                 </ul>
             </article>
-            <article>
+            <article class="assistance">
                 <h3>Assistance</h3>
                 <ul>
                     <li>Centre d'aide</li>
