optimisation multi-écrans

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
         <nav>
             <img src="images/logo/Booki.png" alt="Logo du site " class="logo"/>
           </a>
-          <div>
+          <div class="menu">
             <a href="#ancre1">Hébergements</a>
             <a href="#ancre2">Activités</a>
           </div>
