--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         </nav>
       </header>
       <main>
-        <section>
+        <section class="introduction">
           <h2>Trouvez votre hébergement pour des vacances de rêves</h2>
           <p>En plein centre ville ou en pleine nature</p>
           <div class="formulaire">
