--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
               <i
                 class="fa-sharp fa-solid fa-location-dot"
               ></i>
-              <input type="text" name="Recherchez" class="rechercher" />
+              <input type="text" value="Marseille, France" class="rechercher" />
               <input type="button" value="Rechercher" class="bouton" />
               <!-- "input type=button" permet de ne pas pouvoir utiliser le bouton -->
             </form>
