--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 class="fa-sharp fa-solid fa-location-dot"
               ></i>
               <input type="text" value="Marseille, France" class="rechercher" />
-              <input type="button" value="Rechercher" class="bouton" />
+              <input type="button" value="Rechercher" class="bouton"/>
               <!-- "input type=button" permet de ne pas pouvoir utiliser le bouton -->
             </form>
           </div>
@@ -68,7 +68,7 @@
                     <i class="fa-solid fa-info"></i>Plus de 500 logements sont disponibles dans cette ville</p>
             </section>
         <div class="hebergements-and-populaires">
-            <section class="hebergements">
+            <section class="hebergements" id="background">
                 <div class="hebergement-title">
                     <h2 id="ancre1">Hébergements à Marseille</h2>
                 </div>
@@ -204,7 +204,7 @@
                     <h3>Afficher plus</h3>  
                 </div>
             </section>
-        <section class="populaires">
+        <section class="populaires" id="corner">
             <div class="populaires-title">
               <h2 class="section-title">Les plus populaires</h2>
               <i class="fa-solid fa-chart-line" aria-hidden="true"></i>
