responsive desktop and tablet, try to mobile version

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 class="fa-sharp fa-solid fa-location-dot"
               ></i>
               <input type="text" value="Marseille, France" class="rechercher" />
-              <input type="button" value="Rechercher" class="bouton"/>
+              <input type="button" value="Rechercher" class="bouton"/
               <!-- "input type=button" permet de ne pas pouvoir utiliser le bouton -->
             </form>
           </div>
