integrate loupe in mobile version

--- a/index.html
+++ b/index.html
@@ -42,8 +42,10 @@
                 class="fa-sharp fa-solid fa-location-dot"
               ></i>
               <input type="text" value="Marseille, France" class="rechercher" />
-              <input type="button" value="Rechercher" class="bouton"/
-              <!-- "input type=button" permet de ne pas pouvoir utiliser le bouton -->
+              <button class="button">
+                <span class="button_search">Rechercher</span>
+                <span class="button_loupe"><i class="fa-solid fa-magnifying-glass"></i></span>
+              </button>
             </form>
           </div>
         </section>
