--- a/index.html
+++ b/index.html
@@ -40,7 +40,8 @@
               <i class="fa-sharp fa-solid fa-location-dot"></i>
               <input type="text" value="Marseille, France" class="rechercher" />
               <button class="button">
-                <span class="button_search">Rechercher</span>
+                <span class="button_search" disabled>Rechercher</span>
+                <!-- "disabled" pour rendre le bouton non fonctionnel -->
                 <span class="button_loupe"
                   ><i class="fa-solid fa-magnifying-glass"></i
                 ></span>
@@ -53,10 +54,22 @@
             <h3>Filtres</h3>
             <ul>
               <!-- icon prit avec le code de font awesome -->
-              <li><i class="fa-solid fa-money-bill-wave"></i>Economique</li>
-              <li><i class="fa-solid fa-person"></i>Familial</li>
-              <li><i class="fa-solid fa-heart"></i>Romantique</li>
-              <li><i class="fa-solid fa-fire"></i>Nos pépites</li>
+              <li>
+                <i class="fa-solid fa-money-bill-wave"></i>
+                <p>Economique</p>
+              </li>
+              <li>
+                <i class="fa-solid fa-person"></i>
+                <p>Familial</p>
+              </li>
+              <li>
+                <i class="fa-solid fa-heart"></i>
+                <p>Romantique</p>
+              </li>
+              <li>
+                <i class="fa-solid fa-fire"></i>
+                <p>Nos pépites</p>
+              </li>
             </ul>
           </div>
         </section>
@@ -78,7 +91,6 @@
                     src="/images/hebergements/fred-kleber.jpg"
                     alt="Hôtel du port"
                   />
-                  <div class="photo_contenu"></div>
                   <div class="photo_text">
                     <h3 class="photo_title">Hôtel du port</h3>
                     <p class="photo_subtitle">
