--- a/index.html
+++ b/index.html
@@ -39,8 +39,8 @@
             <form action="#" method="get">
               <i class="fa-sharp fa-solid fa-location-dot"></i>
               <input type="text" value="Marseille, France" class="rechercher" />
-              <button class="button">
-                <span class="button_search" disabled>Rechercher</span>
+              <button class="button" disabled>
+                <span class="button_search">Rechercher</span>
                 <!-- "disabled" pour rendre le bouton non fonctionnel -->
                 <span class="button_loupe"
                   ><i class="fa-solid fa-magnifying-glass"></i
@@ -88,7 +88,7 @@
               <a href="#">
                 <article class="photos">
                   <img
-                    src="/images/hebergements/fred-kleber.jpg"
+                    src="./images/hebergements/fred-kleber.jpg"
                     alt="Hôtel du port"
                   />
                   <div class="photo_text">
@@ -113,7 +113,7 @@
               <a href="#">
                 <article class="photos">
                   <img
-                    src="/images/hebergements/febrian-zakaria.jpg"
+                    src="./images/hebergements/febrian-zakaria.jpg"
                     alt="Hôtel Chez Amina"
                   />
                   <div class="photo_contenu"></div>
@@ -139,7 +139,7 @@
               <a href="#">
                 <article class="photos">
                   <img
-                    src="/images/hebergements/reisetopia.jpg"
+                    src="./images/hebergements/reisetopia.jpg"
                     alt="Hôtel Les mouettes"
                   />
                   <div class="photo_contenu"></div>
@@ -165,7 +165,7 @@
               <a href="#">
                 <article class="photos">
                   <img
-                    src="/images/hebergements/annie-spratt.jpg"
+                    src="./images/hebergements/annie-spratt.jpg"
                     alt="Hôtel de la mer"
                   />
                   <div class="photo_contenu"></div>
@@ -191,7 +191,7 @@
               <a href="#">
                 <article class="photos">
                   <img
-                    src="/images/hebergements/marcus-loke.jpg"
+                    src="./images/hebergements/marcus-loke.jpg"
                     alt="Auberge La Canebière"
                   />
                   <div class="photo_contenu"></div>
@@ -217,7 +217,7 @@
               <a href="#">
                 <article class="photos">
                   <img
-                    src="/images/hebergements/nicate-lee.jpg"
+                    src="./images/hebergements/nicate-lee.jpg"
                     alt="Auberge Le Panier"
                   />
                   <div class="photo_contenu"></div>
@@ -346,7 +346,7 @@
             <a href="#">
               <article class="photos2">
                 <img
-                  src="/images/activites/reno-laithienne.jpg
+                  src="./images/activites/reno-laithienne.jpg
                             "
                   alt="photo du vieux port"
                 />
@@ -355,7 +355,7 @@
 
               <article class="photos2">
                 <img
-                  src="/images/activites/paul-hermann.jpg"
+                  src="./images/activites/paul-hermann.jpg"
                   alt="photo du fort de pomègues"
                 />
                 <h4>Fort de Pomègues</h4>
@@ -363,7 +363,7 @@
 
               <article class="photos2">
                 <img
-                  src="/images/activites/kilyan-sockalingum.jpg"
+                  src="./images/activites/kilyan-sockalingum.jpg"
                   alt="photo du parc national des calanques"
                 />
                 <div class="photo_contenu2"></div>
@@ -372,7 +372,7 @@
               </article>
               <article class="photos2">
                 <img
-                  src="/images/activites/florian-wehde.jpg"
+                  src="./images/activites/florian-wehde.jpg"
                   alt="photo de notre dame de la garde"
                 />
                 <h4>Notre-Dame-de-la-Garde</h4>
